--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
         <main id="content-area">
             <div id="home-view">
-                <h2>مرحباً بك!</h2>
-                <p>جاري تحميل الملخص المالي...</p>
+                <h2>جاري تحميل التطبيق...</h2>
             </div>
         </main>
 
@@ -26,9 +25,11 @@
 
         <div id="bottom-sheet" class="bottom-sheet">
             <div class="bottom-sheet-content">
-                <button class="close-btn">إغلاق</button>
-                <h3>إضافة معاملة جديدة</h3>
-                <p>نموذج الإدخال...</p>
+                <button class="close-btn" id="close-bottom-sheet">إغلاق</button>
+                <h3 id="sheet-title">إضافة معاملة جديدة</h3>
+                
+                <div id="sheet-form-area">
+                    </div>
             </div>
         </div>
 
