--- a/index.html
+++ b/index.html
@@ -1,43 +1,344 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smart Budget | ميزانية ذكية</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@400;700&display=swap" rel="stylesheet">
-</head>
-<body>
-    <div id="app-container">
-        <header id="main-header">
-            <h1>ميزانية ذكية</h1>
-        </header>
-
-        <main id="content-area">
-            <div id="home-view">
-                <h2>جاري تحميل التطبيق...</h2>
-            </div>
-        </main>
-
-        <button id="fab-add-expense" class="fab">
-            +
-        </button>
-
-        <div id="bottom-sheet" class="bottom-sheet">
-            <div class="bottom-sheet-content">
-                <button class="close-btn" id="close-bottom-sheet">إغلاق</button>
-                <h3 id="sheet-title">إضافة معاملة جديدة</h3>
-                
-                <div id="sheet-form-area">
-                    </div>
-            </div>
-        </div>
-
-        <div id="toast-message" class="toast"></div>
-
-    </div>
-
-    <script src="storage.js"></script>
-    <script src="app.js"></script>
-</body>
+<!DOCTYPE html>  
+<html lang="ar">  
+<head>  
+    <meta charset="UTF-8">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <title>ميزانيتك المالية الذكية</title>  
+    <style>  
+        /* التصميم الأساسي */  
+        body {  
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
+            background-color: #f4f4f9;  
+            color: #333;  
+            margin: 0;  
+            padding: 0;  
+            box-sizing: border-box;  
+            overflow: hidden;  
+            display: flex;  
+            flex-direction: column;  
+            height: 100vh;  
+        }  
+  
+        /* العنوان */  
+        h1 {  
+            background-color: #007bff;  
+            color: white;  
+            padding: 20px;  
+            text-align: center;  
+            font-size: 28px;  
+            margin: 0;  
+        }  
+  
+        .container {  
+            padding: 20px;  
+            text-align: center;  
+            flex-grow: 1;  
+            overflow-y: auto;  
+            height: 100%;  
+        }  
+  
+        .select-container {  
+            margin-top: 20px;  
+            padding: 10px;  
+        }  
+  
+        select, input[type="text"] {  
+            width: 80%;  
+            padding: 10px;  
+            font-size: 16px;  
+            border-radius: 5px;  
+            border: 1px solid #ccc;  
+            margin-bottom: 20px;  
+            position: relative;  
+        }  
+  
+        /* تحسين حقل البحث لعرض النتائج */  
+        #currency-search-results {  
+            position: absolute;  
+            width: 80%;  
+            max-height: 150px;  
+            overflow-y: auto;  
+            background-color: #fff;  
+            border: 1px solid #ccc;  
+            border-radius: 5px;  
+            z-index: 10;  
+            display: none;  
+        }  
+  
+        #currency-search-results div {  
+            padding: 10px;  
+            cursor: pointer;  
+            transition: background-color 0.3s;  
+        }  
+  
+        #currency-search-results div:hover {  
+            background-color: #f1f1f1;  
+        }  
+  
+        .button-group {  
+            display: flex;  
+            justify-content: center;  
+            gap: 20px;  
+            margin-top: 20px;  
+        }  
+  
+        .section-btn {  
+            background-color: #28a745;  
+            color: white;  
+            padding: 12px 25px;  
+            border: none;  
+            border-radius: 5px;  
+            cursor: pointer;  
+            font-size: 16px;  
+            transition: background-color 0.3s;  
+        }  
+  
+        .section-btn:hover {  
+            background-color: #218838;  
+        }  
+  
+        .form-container {  
+            display: flex;  
+            flex-direction: column;  
+            gap: 10px;  
+            align-items: center;  
+            margin-top: 20px;  
+        }  
+  
+        input, select, button {  
+            padding: 12px;  
+            width: 80%;  
+            font-size: 16px;  
+            border-radius: 5px;  
+            border: 1px solid #ccc;  
+        }  
+  
+        .transaction-list {  
+            margin-top: 30px;  
+            padding: 10px;  
+            border: 1px solid #ddd;  
+            border-radius: 8px;  
+            width: 80%;  
+            background-color: #fff;  
+        }  
+  
+        .transaction-item {  
+            background-color: #e9f7df;  
+            padding: 10px;  
+            margin: 5px 0;  
+            border-radius: 5px;  
+            cursor: pointer;  
+            text-align: left;  
+            transition: background-color 0.3s;  
+        }  
+  
+        .transaction-item:hover {  
+            background-color: #c8e6c9;  
+        }  
+  
+        #expenses-section, #debts-section, #rights-section {  
+            display: none;  
+        }  
+  
+        .container, .form-container, .transaction-list {  
+            width: 100%;  
+            max-width: 800px;  
+            margin: 0 auto;  
+        }  
+    </style>  
+</head>  
+<body>  
+  
+    <h1>ميزانيتك المالية الذكية</h1>  
+  
+    <div class="container">  
+        <div class="select-container">  
+            <input type="text" id="currency-search" class="currency-search" placeholder="ابحث أو اختر عملتك">  
+            <div id="currency-search-results"></div>  
+            <select id="currency-select">  
+                <option>اختار عملتك</option>  
+            </select>  
+        </div>  
+  
+        <div class="button-group">  
+            <button class="section-btn" onclick="showExpenses()">المصاريف اليومية</button>  
+            <button class="section-btn" onclick="showDebts()">التزاماتي المالية</button>  
+            <button class="section-btn" onclick="showRights()">حقوقي لدى الآخرين</button>  
+        </div>  
+    </div>  
+  
+    <!-- قسم المصاريف اليومية -->  
+    <div id="expenses-section">  
+        <h2>إضافة مصروف جديد</h2>  
+        <div class="form-container">  
+            <label for="amount">المبلغ</label>  
+            <input type="number" id="amount" placeholder="المبلغ">  
+  
+            <label for="category">الفئة</label>  
+            <select id="category">  
+                <option>اختار الفئة</option>  
+                <option>طعام</option>  
+                <option>مواصلات</option>  
+                <option>مشتريات</option>  
+                <option>مستحقات طبية</option>  
+                <option>هوايات</option>  
+                <option>إيجار منزل</option>  
+            </select>  
+  
+            <label for="description">الوصف (اختياري)</label>  
+            <input type="text" id="description" placeholder="الوصف (اختياري)">  
+  
+            <label for="invoice">إرفاق صورة الفاتورة</label>  
+            <input type="file" id="invoice" accept="image/*">  
+  
+            <label for="date">التاريخ</label>  
+            <input type="date" id="date">  
+  
+            <button class="section-btn">إضافة مصروف</button>  
+        </div>  
+  
+        <div class="transaction-list">  
+            <h3>سجل المصروفات:</h3>  
+            <div class="transaction-item" onclick="showTransactionDetails('10 ريال - طعام - 31-12-2025')">10 ريال - طعام - 31-12-2025</div>  
+            <div class="transaction-item" onclick="showTransactionDetails('20 ريال - مواصلات - 30-12-2025')">20 ريال - مواصلات - 30-12-2025</div>  
+        </div>  
+    </div>  
+  
+    <div id="debts-section">  
+        <h2>إضافة التزام مالي</h2>  
+        <div class="form-container">  
+            <label for="debt-amount">المبلغ</label>  
+            <input type="number" id="debt-amount" placeholder="المبلغ">  
+  
+            <label for="debt-category">الفئة</label>  
+            <select id="debt-category">  
+                <option>اختار الفئة</option>  
+                <option>فاتورة كهرباء</option>  
+                <option>فاتورة إنترنت</option>  
+                <option>دين شخصي</option>  
+            </select>  
+  
+            <label for="debt-date">تاريخ الاستحقاق</label>  
+            <input type="date" id="debt-date">  
+  
+            <button class="section-btn">إضافة دين</button>  
+        </div>  
+  
+        <div class="transaction-list">  
+            <h3>سجل الالتزامات:</h3>  
+            <div class="transaction-item" onclick="showTransactionDetails('200 ريال - فاتورة كهرباء - 01-12-2025')">200 ريال - فاتورة كهرباء - 01-12-2025</div>  
+            <div class="transaction-item" onclick="showTransactionDetails('150 ريال - دين شخصي - 25-11-2025')">150 ريال - دين شخصي - 25-11-2025</div>  
+        </div>  
+    </div>  
+  
+    <div id="rights-section">  
+        <h2>إضافة حق لدي</h2>  
+        <div class="form-container">  
+            <label for="person-name">اسم الشخص</label>  
+            <input type="text" id="person-name" placeholder="اسم الشخص">  
+  
+            <label for="right-amount">المبلغ</label>  
+            <input type="number" id="right-amount" placeholder="المبلغ">  
+  
+            <label for="right-date">التاريخ</label>  
+            <input type="date" id="right-date">  
+  
+            <label for="status">حالة السداد</label>  
+            <select id="status">  
+                <option>حالة السداد</option>  
+                <option>تم السداد</option>  
+                <option>لم يتم السداد</option>  
+            </select>  
+  
+            <button class="section-btn">إضافة حق</button>  
+        </div>  
+  
+        <div class="transaction-list">  
+            <h3>سجل حقوقي لدى الآخرين:</h3>  
+            <div class="transaction-item" onclick="showTransactionDetails('50 ريال - أحمد - 15-12-2025 - لم يتم السداد')">50 ريال - أحمد - 15-12-2025 - لم يتم السداد</div>  
+            <div class="transaction-item" onclick="showTransactionDetails('100 ريال - فاطمة - 20-11-2025 - تم السداد')">100 ريال - فاطمة - 20-11-2025 - تم السداد</div>  
+        </div>  
+    </div>  
+  
+    <script>  
+        const currencies = [  
+            { name: 'الدينار الجزائري', code: 'DZD', flag: '🇩🇿' },  
+            { name: 'الدرهم المغربي', code: 'MAD', flag: '🇲🇦' },  
+            { name: 'الريال السعودي', code: 'SAR', flag: '🇸🇦' },  
+            { name: 'الدينار الأردني', code: 'JOD', flag: '🇯🇴' },  
+            { name: 'الدينار الكويتي', code: 'KWD', flag: '🇰🇼' },  
+            { name: 'الجنيه المصري', code: 'EGP', flag: '🇪🇬' },  
+            { name: 'الدرهم الإماراتي', code: 'AED', flag: '🇦🇪' },  
+            { name: 'الدينار البحريني', code: 'BHD', flag: '🇧🇭' },  
+            { name: 'الريال العماني', code: 'OMR', flag: '🇴🇲' },  
+            { name: 'الريال القطري', code: 'QAR', flag: '🇶🇦' },  
+            { name: 'جنيه جنوب سوداني', code: 'SSP', flag: '🇸🇸' },  
+            { name: 'الريال اليمني', code: 'YER', flag: '🇾🇪' },  
+            { name: 'الدينار التونسي', code: 'TND', flag: '🇹🇳' },  
+            { name: 'الليرة السورية', code: 'SYP', flag: '🇸🇾' },  
+            { name: 'الليرة اللبنانية', code: 'LBP', flag: '🇱🇧' },  
+            { name: 'الريال الصومالي', code: 'SOS', flag: '🇸🇴' },  
+            { name: 'الأوقية الموريتانية', code: 'MRU', flag: '🇲🇷' },  
+            { name: 'الدينار الليبي', code: 'LYD', flag: '🇱🇾' },  
+            { name: 'الريال الفلسطيني', code: 'ILS', flag: '🇵🇸' }  
+        ];  
+  
+        const currencySelect = document.getElementById('currency-select');  
+        const searchResults = document.getElementById('currency-search-results');  
+  
+        // إضافة العملات إلى القائمة المنسدلة  
+        currencies.forEach(currency => {  
+            const option = document.createElement('option');  
+            option.value = currency.code;  
+            option.textContent = `${currency.name} (${currency.code}) ${currency.flag}`;  
+            currencySelect.appendChild(option);  
+        });  
+  
+        // عرض نتائج البحث عند الكتابة  
+        document.getElementById('currency-search').addEventListener('input', function() {  
+            const filter = this.value.toUpperCase();  
+            searchResults.innerHTML = '';  
+            let filteredCurrencies = currencies.filter(currency => currency.name.toUpperCase().includes(filter));  
+  
+            if (filteredCurrencies.length > 0) {  
+                searchResults.style.display = 'block';  
+                filteredCurrencies.forEach(currency => {  
+                    const resultItem = document.createElement('div');  
+                    resultItem.textContent = `${currency.name} (${currency.code}) ${currency.flag}`;  
+                    resultItem.onclick = function() {  
+                        document.getElementById('currency-search').value = currency.name;  
+                        searchResults.style.display = 'none';  
+                    };  
+                    searchResults.appendChild(resultItem);  
+                });  
+            } else {  
+                searchResults.style.display = 'none';  
+            }  
+        });  
+  
+        // دالة إظهار الأقسام  
+        function showExpenses() {  
+            document.getElementById("expenses-section").style.display = "block";  
+            document.getElementById("debts-section").style.display = "none";  
+            document.getElementById("rights-section").style.display = "none";  
+        }  
+  
+        function showDebts() {  
+            document.getElementById("expenses-section").style.display = "none";  
+            document.getElementById("debts-section").style.display = "block";  
+            document.getElementById("rights-section").style.display = "none";  
+        }  
+  
+        function showRights() {  
+            document.getElementById("expenses-section").style.display = "none";  
+            document.getElementById("debts-section").style.display = "none";  
+            document.getElementById("rights-section").style.display = "block";  
+        }  
+  
+        function showTransactionDetails(transaction) {  
+            alert("تفاصيل المعاملة: " + transaction);  
+        }  
+    </script>  
+  
+</body>  
 </html>
