--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>  
+<!DOCTYPEDOCTYPE html>  
 <html lang="ar">  
 <head>  
     <meta charset="UTF-8">  
@@ -167,7 +167,6 @@
         </div>  
     </div>  
   
-    <!-- قسم المصاريف اليومية -->  
     <div id="expenses-section">  
         <h2>إضافة مصروف جديد</h2>  
         <div class="form-container">  
@@ -342,3 +341,4 @@
   
 </body>  
 </html>
+
