--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ميزانيتك المالية الذكية</title>
+<title>ميزانيتك الذكية</title>
 
 <style>
-:root{--primary:#0d6efd;--success:#28a745;--bg:#f4f6f8}
-body{margin:0;font-family:Tahoma,Arial;background:var(--bg)}
-header{background:var(--primary);color:#fff;padding:15px;text-align:center;font-size:20px}
+:root{--p:#0d6efd;--s:#28a745;--bg:#f4f6f8}
+body{margin:0;font-family:Tahom,a;background:var(--bg)}
+header{background:var(--p);color:#fff;padding:15px;text-align:center;font-size:20px}
 .tabs{display:flex;background:#fff}
 .tabs button{flex:1;padding:12px;border:none;background:#fff}
-.tabs button.active{background:var(--primary);color:#fff}
+.tabs button.active{background:var(--p);color:#fff}
 .section{display:none;padding:15px}
 .section.active{display:block}
 .card{background:#fff;padding:15px;border-radius:12px;box-shadow:0 2px 6px rgba(0,0,0,.1);margin-bottom:12px}
 input,select{width:100%;padding:12px;margin:6px 0;font-size:15px;border-radius:8px;border:1px solid #ccc}
-button.action{background:var(--success);color:#fff;border:none;padding:14px;width:100%;border-radius:8px;font-size:16px}
+button.action{background:var(--s);color:#fff;border:none;padding:14px;width:100%;border-radius:8px;font-size:16px}
 button.secondary{background:#ddd;padding:10px;width:100%;border:none;border-radius:8px;margin-top:6px}
 .toast{position:fixed;bottom:20px;left:50%;transform:translateX(-50%);background:#333;color:#fff;padding:12px 22px;border-radius:30px;display:none}
 .toast.show{display:block}
@@ -25,7 +25,7 @@ button.secondary{background:#ddd;padding:10px;width:100%;border:none;border-radi
 .modal header{display:flex;gap:6px;padding:10px;border-bottom:1px solid #ddd}
 .modal-content{padding:15px;overflow:auto;flex:1}
 .list-item{background:#eef6ff;padding:14px;border-radius:12px;margin-bottom:8px;cursor:pointer}
-.detail p{margin:8px 0;font-size:15px}
+.detail p{margin:8px 0}
 .detail img{width:100%;border-radius:10px;margin-top:10px}
 </style>
 </head>
@@ -44,17 +44,17 @@ button.secondary{background:#ddd;padding:10px;width:100%;border:none;border-radi
 <!-- المصروفات -->
 <div id="expenses" class="section active">
 <div class="card">
-<input id="eAmount" placeholder="المبلغ" inputmode="numeric" oninput="formatAmount(this)">
+<input id="eAmount" placeholder="المبلغ" oninput="formatAmount(this)">
 <select id="eType">
 <option value="">الفئة</option>
 <option>طعام</option><option>مواصلات</option><option>فواتير</option>
 <option>إيجار</option><option>صحة</option><option>ترفيه</option><option>تسوق</option>
 </select>
 <input id="eDesc" placeholder="وصف / ملاحظة">
-<input id="eDate" type="datetime-local" placeholder="📅 الوقت والتاريخ">
+<input id="eDate" type="datetime-local">
 <input id="eImg" type="file" accept="image/*">
 <button class="action" onclick="addExpense()">حفظ</button>
-<button class="secondary" onclick="openLog('exp')">📂 عرض السجل</button>
+<button class="secondary" onclick="openLog('exp')">📂 السجل</button>
 </div>
 </div>
 
@@ -64,14 +64,18 @@ button.secondary{background:#ddd;padding:10px;width:100%;border:none;border-radi
 <input id="rName" placeholder="اسم الشخص">
 <select id="rType">
 <option value="">نوع الحق</option>
-<option>دين شخصي</option><option>سلفة</option><option>بيع</option><option>مشاركة</option>
+<option>دين</option><option>سلفة</option><option>بيع</option>
 </select>
-<input id="rAmount" placeholder="المبلغ" inputmode="numeric" oninput="formatAmount(this)">
+<input id="rAmount" placeholder="المبلغ" oninput="formatAmount(this)">
 <input id="rDesc" placeholder="وصف / ملاحظة">
-<input id="rDate" type="datetime-local" placeholder="📅 الوقت والتاريخ">
-<select id="rStatus"><option value="">الحالة</option><option>مدفوع</option><option>غير مدفوع</option></select>
+<input id="rDate" type="datetime-local">
+<select id="rStatus">
+<option value="">الحالة</option>
+<option>مدفوع</option>
+<option>غير مدفوع</option>
+</select>
 <button class="action" onclick="addRight()">حفظ</button>
-<button class="secondary" onclick="openLog('rig')">📂 عرض السجل</button>
+<button class="secondary" onclick="openLog('rig')">📂 السجل</button>
 </div>
 </div>
 
@@ -83,12 +87,16 @@ button.secondary{background:#ddd;padding:10px;width:100%;border:none;border-radi
 <option>كهرباء</option><option>ماء</option><option>إنترنت</option>
 <option>إيجار</option><option>دين</option>
 </select>
-<input id="dAmount" placeholder="المبلغ" inputmode="numeric" oninput="formatAmount(this)">
+<input id="dAmount" placeholder="المبلغ" oninput="formatAmount(this)">
 <input id="dDesc" placeholder="وصف / ملاحظة">
-<input id="dDate" type="datetime-local" placeholder="📅 الوقت والتاريخ">
-<select id="dStatus"><option value="">الحالة</option><option>مدفوع</option><option>غير مدفوع</option></select>
+<input id="dDate" type="datetime-local">
+<select id="dStatus">
+<option value="">الحالة</option>
+<option>مدفوع</option>
+<option>غير مدفوع</option>
+</select>
 <button class="action" onclick="addDebt()">حفظ</button>
-<button class="secondary" onclick="openLog('deb')">📂 عرض السجل</button>
+<button class="secondary" onclick="openLog('deb')">📂 السجل</button>
 </div>
 </div>
 
@@ -100,14 +108,12 @@ button.secondary{background:#ddd;padding:10px;width:100%;border:none;border-radi
 <p>عدد العمليات: <b id="sExpCount">0</b></p>
 <p>أعلى فئة: <b id="sTopCat">—</b></p>
 </div>
-
 <div class="card">
 <h3>🤝 الحقوق</h3>
 <p>الإجمالي: <b id="sRigTotal">0</b></p>
 <p>مدفوع: <b id="sRigPaid">0</b></p>
 <p>غير مدفوع: <b id="sRigUnpaid">0</b></p>
 </div>
-
 <div class="card">
 <h3>📌 الالتزامات</h3>
 <p>الإجمالي: <b id="sDebTotal">0</b></p>
@@ -119,7 +125,7 @@ button.secondary{background:#ddd;padding:10px;width:100%;border:none;border-radi
 <!-- السجل -->
 <div class="modal" id="logModal">
 <header>
-<input id="search" placeholder="🔍 بحث في السجل" oninput="renderLog()">
+<input id="search" placeholder="🔍 بحث" oninput="renderLog()">
 <button onclick="closeLog()">إغلاق</button>
 </header>
 <div class="modal-content" id="logContent"></div>
@@ -127,207 +133,127 @@ button.secondary{background:#ddd;padding:10px;width:100%;border:none;border-radi
 
 <!-- التفاصيل -->
 <div class="modal" id="detailModal">
-<header><button onclick="detailModal.style.display='none'">إغلاق</button></header>
+<header>
+<button onclick="detailModal.style.display='none'">إغلاق</button>
+</header>
 <div class="modal-content detail" id="detailContent"></div>
 </div>
 
 <div class="toast" id="toast"></div>
 
 <script>
-// ===== الإحصائيات ======
-function parseAmount(v){
-    return Number(v.replace(/,/g,''))||0;
-}
+const db={
+exp:JSON.parse(localStorage.getItem("exp")||"[]"),
+rig:JSON.parse(localStorage.getItem("rig")||"[]"),
+deb:JSON.parse(localStorage.getItem("deb")||"[]")
+};
 
-function updateStats(){
-    // المصروفات
-    let expTotal=0, cats={}, expCount=db.exp.length;
-    db.exp.forEach(e=>{
-        const a=parseAmount(e.المبلغ);
-        expTotal+=a;
-        cats[e.الفئة]=(cats[e.الفئة]||0)+a;
-    });
-    let topCat="—", max=0;
-    for(let c in cats){
-        if(cats[c]>max){max=cats[c];topCat=c;}
-    }
+let currentLog="",editMode=null;
 
-    // الحقوق
-    let rigTotal=0, rigPaid=0, rigUnpaid=0;
-    db.rig.forEach(r=>{
-        const a=parseAmount(r.المبلغ);
-        rigTotal+=a;
-        r.الحالة==="مدفوع"?rigPaid+=a:rigUnpaid+=a;
-    });
-
-    // الالتزامات
-    let debTotal=0, debPaid=0, debUnpaid=0;
-    db.deb.forEach(d=>{
-        const a=parseAmount(d.المبلغ);
-        debTotal+=a;
-        d.الحالة==="مدفوع"?debPaid+=a:debUnpaid+=a;
-    });
-
-    // عرض القيم
-    sExpTotal.textContent=expTotal.toLocaleString();
-    sExpCount.textContent=expCount;
-    sTopCat.textContent=topCat;
-
-    sRigTotal.textContent=rigTotal.toLocaleString();
-    sRigPaid.textContent=rigPaid.toLocaleString();
-    sRigUnpaid.textContent=rigUnpaid.toLocaleString();
-
-    sDebTotal.textContent=debTotal.toLocaleString();
-    sDebPaid.textContent=debPaid.toLocaleString();
-    sDebUnpaid.textContent=debUnpaid.toLocaleString();
-}
-
-// تحديث تلقائي
+function save(){
+localStorage.setItem("exp",JSON.stringify(db.exp));
+localStorage.setItem("rig",JSON.stringify(db.rig));
+localStorage.setItem("deb",JSON.stringify(db.deb));
 updateStats();
-const oldSave=save;
-save=function(){
-    oldSave();
-    updateStats();
 }
 
-// ====== الإشعارات ======
-if ("Notification" in window) {
-    Notification.requestPermission();
-}
-
-const notified = JSON.parse(localStorage.getItem("notified")) || [];
-
-function checkNotifications() {
-    const now = new Date().getTime();
-
-    // الالتزامات
-    db.deb.forEach((d, i) => {
-        if (d.الحالة !== "غير مدفوع") return;
-
-        const time = new Date(d.التاريخ).getTime();
-        const id = "deb-" + i;
-
-        // إشعار عند الموعد
-        if (now >= time && !notified.includes(id)) {
-            sendNotification(
-                "📌 التزام مستحق",
-                `لديك ${d.النوع} بقيمة ${d.المبلغ}`
-            );
-            notified.push(id);
-        }
-    });
-
-    // الحقوق
-    db.rig.forEach((r, i) => {
-        if (r.الحالة !== "غير مدفوع") return;
-
-        const time = new Date(r.التاريخ).getTime();
-        const id = "rig-" + i;
-
-        if (now >= time && !notified.includes(id)) {
-            sendNotification(
-                "🤝 حق غير مسدد",
-                `${r.الاسم} عليه ${r.المبلغ} (${r.النوع})`
-            );
-            notified.push(id);
-        }
-    });
-
-    localStorage.setItem("notified", JSON.stringify(notified));
-}
-
-function sendNotification(title, body) {
-    if (Notification.permission === "granted") {
-        new Notification(title, {
-            body: body,
-            icon: "🔔"
-        });
-    }
-}
-
-// تشغيل الفحص عند فتح التطبيق
-checkNotifications();
-
-// فحص كل دقيقة
-setInterval(checkNotifications, 60000);
-
-// =======================
-function formatAmount(el){
-    el.value=el.value.replace(/\D/g,'').replace(/\B(?=(\d{3})+(?!\d))/g,",");
-}
+function formatAmount(e){e.value=e.value.replace(/\D/g,'').replace(/\B(?=(\d{3})+(?!\d))/g,",")}
 
 function toastMsg(m){
-    const t=document.getElementById("toast");
-    t.textContent=m;
-    t.classList.add("show");
-    setTimeout(()=>t.classList.remove("show"),2500);
+toast.textContent=m;
+toast.classList.add("show");
+setTimeout(()=>toast.classList.remove("show"),2000);
 }
 
 function openTab(id){
-    document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));
-    document.querySelectorAll(".tabs button").forEach(b=>b.classList.remove("active"));
-    document.getElementById(id).classList.add("active");
-    event.target.classList.add("active");
+document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));
+document.querySelectorAll(".tabs button").forEach(b=>b.classList.remove("active"));
+document.getElementById(id).classList.add("active");
+event.target.classList.add("active");
 }
-
-function save(){
-    localStorage.setItem("exp",JSON.stringify(db.exp));
-    localStorage.setItem("rig",JSON.stringify(db.rig));
-    localStorage.setItem("deb",JSON.stringify(db.deb));
-}
-
-function resetExpense(){eAmount.value=eDesc.value="";eType.value="";eDate.value="";eImg.value=""}
-function resetRight(){rName.value=rAmount.value=rDesc.value="";rType.value=rStatus.value="";rDate.value=""}
-function resetDebt(){dAmount.value=dDesc.value="";dType.value=dStatus.value="";dDate.value=""}
 
 function addExpense(){
-    if(!eAmount.value||!eType.value||!eDate.value)return toastMsg("أكمل البيانات");
-    const r=new FileReader();
-    r.onload=()=>{
-        db.exp.unshift({المبلغ:eAmount.value,الفئة:eType.value,الوصف:eDesc.value,التاريخ:eDate.value,صورة:r.result||null});
-        save();resetExpense();toastMsg("تم حفظ المصروف");
-    };
-    eImg.files[0]?r.readAsDataURL(eImg.files[0]):r.onload();
+if(!eAmount.value||!eType.value||!eDate.value)return toastMsg("أكمل البيانات");
+const data={المبلغ:eAmount.value,الفئة:eType.value,الوصف:eDesc.value,التاريخ:eDate.value,صورة:null};
+const done=()=>{
+if(editMode&&editMode.type==="exp"){db.exp[editMode.index]=data;toastMsg("تم التعديل");editMode=null}
+else{db.exp.unshift(data);toastMsg("تم الحفظ")}
+save();eAmount.value=eDesc.value="";eType.value="";eDate.value="";eImg.value="";
+};
+if(eImg.files[0]){
+const r=new FileReader();
+r.onload=()=>{data.صورة=r.result;done()};
+r.readAsDataURL(eImg.files[0]);
+}else done();
 }
 
 function addRight(){
-    if(!rName.value||!rAmount.value||!rDate.value||!rStatus.value)return toastMsg("أكمل البيانات");
-    db.rig.unshift({الاسم:rName.value,النوع:rType.value,المبلغ:rAmount.value,الوصف:rDesc.value,التاريخ:rDate.value,الحالة:rStatus.value});
-    save();resetRight();toastMsg("تم حفظ الحق");
+if(!rName.value||!rAmount.value||!rDate.value||!rStatus.value)return toastMsg("أكمل البيانات");
+const data={الاسم:rName.value,النوع:rType.value,المبلغ:rAmount.value,الوصف:rDesc.value,التاريخ:rDate.value,الحالة:rStatus.value};
+if(editMode&&editMode.type==="rig"){db.rig[editMode.index]=data;editMode=null;toastMsg("تم التعديل")}
+else{db.rig.unshift(data);toastMsg("تم الحفظ")}
+save();rName.value=rAmount.value=rDesc.value="";rType.value=rStatus.value="";rDate.value="";
 }
 
 function addDebt(){
-    if(!dType.value||!dAmount.value||!dDate.value||!dStatus.value)return toastMsg("أكمل البيانات");
-    db.deb.unshift({النوع:dType.value,المبلغ:dAmount.value,الوصف:dDesc.value,التاريخ:dDate.value,الحالة:dStatus.value});
-    save();resetDebt();toastMsg("تم حفظ الالتزام");
+if(!dType.value||!dAmount.value||!dDate.value||!dStatus.value)return toastMsg("أكمل البيانات");
+const data={النوع:dType.value,المبلغ:dAmount.value,الوصف:dDesc.value,التاريخ:dDate.value,الحالة:dStatus.value};
+if(editMode&&editMode.type==="deb"){db.deb[editMode.index]=data;editMode=null;toastMsg("تم التعديل")}
+else{db.deb.unshift(data);toastMsg("تم الحفظ")}
+save();dAmount.value=dDesc.value="";dType.value=dStatus.value="";dDate.value="";
 }
 
 function openLog(t){
-    currentLog=t;
-    logModal.style.display="flex";
-    renderLog();
+currentLog=t;
+logModal.style.display="flex";
+renderLog();
 }
 
-function closeLog(){
-    logModal.style.display="none";
-}
+function closeLog(){logModal.style.display="none"}
 
 function renderLog(){
-    const q=(search.value||"").toLowerCase();
-    const list=db[currentLog].filter(i=>JSON.stringify(i).toLowerCase().includes(q));
-    logContent.innerHTML=list.map(i=>{
-        const title=`${i.الفئة||i.النوع} - ${i.المبلغ}`;
-        return `<div class="list-item" onclick='showDetail(${JSON.stringify(i)})'>${title}</div>`;
-    }).join("");
+const q=(search.value||"").toLowerCase();
+logContent.innerHTML=db[currentLog]
+.filter(i=>JSON.stringify(i).toLowerCase().includes(q))
+.map((i,idx)=>`<div class="list-item" onclick='showDetail(${JSON.stringify(i)},"${currentLog}",${idx})'>${i.الفئة||i.النوع} - ${i.المبلغ}</div>`).join("");
 }
 
-function showDetail(o){
-    detailModal.style.display="flex";
-    detailContent.innerHTML=Object.entries(o).map(([k,v])=>{
-        if(k==="صورة" && v) return `<p><b>صورة الفاتورة:</b></p><img src="${v}">`;
-        return `<p><b>${k}:</b> ${v||"—"}</p>`;
-    }).join("");
+function showDetail(o,type,index){
+editMode={type,index};
+detailModal.style.display="flex";
+detailContent.innerHTML=Object.entries(o).map(([k,v])=>{
+if(k==="صورة"&&v)return `<p><b>صورة:</b></p><img src="${v}">`;
+return `<p><b>${k}:</b> ${v||"—"}</p>`;
+}).join("")+
+`<button class="action" onclick="editTransaction()">✏️ تعديل</button>
+<button class="secondary" onclick="deleteTransaction()">🗑️ حذف</button>`;
 }
+
+function editTransaction(){detailModal.style.display="none"}
+
+function deleteTransaction(){
+if(!confirm("حذف المعاملة؟"))return;
+db[editMode.type].splice(editMode.index,1);
+editMode=null;
+save();
+detailModal.style.display="none";
+toastMsg("تم الحذف");
+}
+
+function parseAmount(v){return Number(v.replace(/,/g,''))||0}
+
+function updateStats(){
+let et=0,ec=db.exp.length,cats={},rt=0,rp=0,ru=0,dt=0,dp=0,du=0;
+db.exp.forEach(e=>{let a=parseAmount(e.المبلغ);et+=a;cats[e.الفئة]=(cats[e.الفئة]||0)+a});
+for(let c in cats){if(cats[c]>0)sTopCat.textContent=c}
+db.rig.forEach(r=>{let a=parseAmount(r.المبلغ);rt+=a;r.الحالة==="مدفوع"?rp+=a:ru+=a});
+db.deb.forEach(d=>{let a=parseAmount(d.المبلغ);dt+=a;d.الحالة==="مدفوع"?dp+=a:du+=a});
+sExpTotal.textContent=et.toLocaleString();sExpCount.textContent=ec;
+sRigTotal.textContent=rt.toLocaleString();sRigPaid.textContent=rp.toLocaleString();sRigUnpaid.textContent=ru.toLocaleString();
+sDebTotal.textContent=dt.toLocaleString();sDebPaid.textContent=dp.toLocaleString();sDebUnpaid.textContent=du.toLocaleString();
+}
+
+updateStats();
 </script>
 
 </body>
