--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@ button.secondary{background:#ddd;padding:10px;width:100%;border:none;border-radi
 .list-item{background:#eef6ff;padding:14px;border-radius:12px;margin-bottom:8px;cursor:pointer}
 .detail p{margin:8px 0}
 .detail img{width:100%;border-radius:10px;margin-top:10px}
+.date-icon{cursor:pointer;padding-left: 5px;display:inline;position:relative;top:-2px;}
+input[type="file"]:before {
+    content: "إرفاق صورة الفاتورة";
+    color: #777;
+    font-size: 14px;
+    display: block;
+    padding: 8px;
+    text-align: center;
+    background: #f4f6f8;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    margin: 10px 0;
+    cursor: pointer;
+}
 </style>
 </head>
 
@@ -44,7 +58,7 @@ button.secondary{background:#ddd;padding:10px;width:100%;border:none;border-radi
 <!-- المصروفات -->
 <div id="expenses" class="section active">
 <div class="card">
-<input id="eAmount" placeholder="المبلغ" oninput="formatAmount(this)">
+<input id="eAmount" type="text" placeholder="💵 المبلغ" oninput="formatAmount(this)" pattern="[0-9]*" inputmode="decimal">
 <select id="eType">
 <option value="">الفئة</option>
 <option>طعام</option><option>مواصلات</option><option>فواتير</option>
@@ -52,6 +66,7 @@ button.secondary{background:#ddd;padding:10px;width:100%;border:none;border-radi
 </select>
 <input id="eDesc" placeholder="وصف / ملاحظة">
 <input id="eDate" type="datetime-local">
+<span class="date-icon" onclick="openDatePicker()">📅</span>
 <input id="eImg" type="file" accept="image/*">
 <button class="action" onclick="addExpense()">حفظ</button>
 <button class="secondary" onclick="openLog('exp')">📂 السجل</button>
@@ -66,9 +81,10 @@ button.secondary{background:#ddd;padding:10px;width:100%;border:none;border-radi
 <option value="">نوع الحق</option>
 <option>دين</option><option>سلفة</option><option>بيع</option>
 </select>
-<input id="rAmount" placeholder="المبلغ" oninput="formatAmount(this)">
+<input id="rAmount" type="text" placeholder="💵 المبلغ" oninput="formatAmount(this)" pattern="[0-9]*" inputmode="decimal">
 <input id="rDesc" placeholder="وصف / ملاحظة">
 <input id="rDate" type="datetime-local">
+<span class="date-icon" onclick="openDatePicker()">📅</span>
 <select id="rStatus">
 <option value="">الحالة</option>
 <option>مدفوع</option>
@@ -87,9 +103,10 @@ button.secondary{background:#ddd;padding:10px;width:100%;border:none;border-radi
 <option>كهرباء</option><option>ماء</option><option>إنترنت</option>
 <option>إيجار</option><option>دين</option>
 </select>
-<input id="dAmount" placeholder="المبلغ" oninput="formatAmount(this)">
+<input id="dAmount" type="text" placeholder="💵 المبلغ" oninput="formatAmount(this)" pattern="[0-9]*" inputmode="decimal">
 <input id="dDesc" placeholder="وصف / ملاحظة">
 <input id="dDate" type="datetime-local">
+<span class="date-icon" onclick="openDatePicker()">📅</span>
 <select id="dStatus">
 <option value="">الحالة</option>
 <option>مدفوع</option>
@@ -142,115 +159,162 @@ button.secondary{background:#ddd;padding:10px;width:100%;border:none;border-radi
 <div class="toast" id="toast"></div>
 
 <script>
-const db={
-exp:JSON.parse(localStorage.getItem("exp")||"[]"),
-rig:JSON.parse(localStorage.getItem("rig")||"[]"),
-deb:JSON.parse(localStorage.getItem("deb")||"[]")
+const db = {
+  exp: JSON.parse(localStorage.getItem("exp") || "[]"),
+  rig: JSON.parse(localStorage.getItem("rig") || "[]"),
+  deb: JSON.parse(localStorage.getItem("deb") || "[]")
 };
 
-let currentLog="",editMode=null;
+let currentLog = "", editMode = null;
 
-function save(){
-localStorage.setItem("exp",JSON.stringify(db.exp));
-localStorage.setItem("rig",JSON.stringify(db.rig));
-localStorage.setItem("deb",JSON.stringify(db.deb));
-updateStats();
+function save() {
+  localStorage.setItem("exp", JSON.stringify(db.exp));
+  localStorage.setItem("rig", JSON.stringify(db.rig));
+  localStorage.setItem("deb", JSON.stringify(db.deb));
+  updateStats();  // Update stats after saving data
 }
 
-function formatAmount(e){e.value=e.value.replace(/\D/g,'').replace(/\B(?=(\d{3})+(?!\d))/g,",")}
-
-function toastMsg(m){
-toast.textContent=m;
-toast.classList.add("show");
-setTimeout(()=>toast.classList.remove("show"),2000);
+function formatAmount(e) {
+  e.value = e.value.replace(/[^\d.]/g, ''); // Remove anything that is not a number or a dot
+  const parts = e.value.split('.');
+  if (parts.length > 2) {
+    e.value = parts[0] + '.' + parts[1].slice(0, 2); // Limit to 2 decimals
+  }
 }
 
-function openTab(id){
-document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));
-document.querySelectorAll(".tabs button").forEach(b=>b.classList.remove("active"));
-document.getElementById(id).classList.add("active");
-event.target.classList.add("active");
+function parseAmount(amount) {
+  // This function converts the amount to a float value
+  return parseFloat(amount.replace(/[^\d.-]/g, '')) || 0;
 }
 
-function addExpense(){
-if(!eAmount.value||!eType.value||!eDate.value)return toastMsg("أكمل البيانات");
-const data={المبلغ:eAmount.value,الفئة:eType.value,الوصف:eDesc.value,التاريخ:eDate.value,صورة:null};
-const done=()=>{
-if(editMode&&editMode.type==="exp"){db.exp[editMode.index]=data;toastMsg("تم التعديل");editMode=null}
-else{db.exp.unshift(data);toastMsg("تم الحفظ")}
-save();eAmount.value=eDesc.value="";eType.value="";eDate.value="";eImg.value="";
-};
-if(eImg.files[0]){
-const r=new FileReader();
-r.onload=()=>{data.صورة=r.result;done()};
-r.readAsDataURL(eImg.files[0]);
-}else done();
+function toastMsg(m) {
+  toast.textContent = m;
+  toast.classList.add("show");
+  setTimeout(() => toast.classList.remove("show"), 2000);
 }
 
-function addRight(){
-if(!rName.value||!rAmount.value||!rDate.value||!rStatus.value)return toastMsg("أكمل البيانات");
-const data={الاسم:rName.value,النوع:rType.value,المبلغ:rAmount.value,الوصف:rDesc.value,التاريخ:rDate.value,الحالة:rStatus.value};
-if(editMode&&editMode.type==="rig"){db.rig[editMode.index]=data;editMode=null;toastMsg("تم التعديل")}
-else{db.rig.unshift(data);toastMsg("تم الحفظ")}
-save();rName.value=rAmount.value=rDesc.value="";rType.value=rStatus.value="";rDate.value="";
+function openTab(id) {
+  document.querySelectorAll(".section").forEach(s => s.classList.remove("active"));
+  document.querySelectorAll(".tabs button").forEach(b => b.classList.remove("active"));
+  document.getElementById(id).classList.add("active");
+  event.target.classList.add("active");
 }
 
-function addDebt(){
-if(!dType.value||!dAmount.value||!dDate.value||!dStatus.value)return toastMsg("أكمل البيانات");
-const data={النوع:dType.value,المبلغ:dAmount.value,الوصف:dDesc.value,التاريخ:dDate.value,الحالة:dStatus.value};
-if(editMode&&editMode.type==="deb"){db.deb[editMode.index]=data;editMode=null;toastMsg("تم التعديل")}
-else{db.deb.unshift(data);toastMsg("تم الحفظ")}
-save();dAmount.value=dDesc.value="";dType.value=dStatus.value="";dDate.value="";
+function addExpense() {
+  if (!eAmount.value || !eType.value || !eDate.value) return toastMsg("أكمل البيانات");
+  const data = { المبلغ: eAmount.value, الفئة: eType.value, الوصف: eDesc.value, التاريخ: eDate.value, صورة: null };
+  const done = () => {
+    if (editMode && editMode.type === "exp") { db.exp[editMode.index] = data; toastMsg("تم التعديل"); editMode = null; }
+    else { db.exp.unshift(data); toastMsg("تم الحفظ"); }
+    save();
+    clearFields(); // Clear fields after saving
+    updateStats(); // Update stats
+  };
+  if (eImg.files[0]) {
+    const r = new FileReader();
+    r.onload = () => { data.صورة = r.result; done(); };
+    r.readAsDataURL(eImg.files[0]);
+  } else done();
 }
 
-function openLog(t){
-currentLog=t;
-logModal.style.display="flex";
-renderLog();
+function addRight() {
+  if (!rName.value || !rAmount.value || !rDate.value || !rStatus.value) return toastMsg("أكمل البيانات");
+  const data = { الاسم: rName.value, النوع: rType.value, المبلغ: rAmount.value, الوصف: rDesc.value, التاريخ: rDate.value, الحالة: rStatus.value };
+  if (editMode && editMode.type === "rig") { db.rig[editMode.index] = data; editMode = null; toastMsg("تم التعديل"); }
+  else { db.rig.unshift(data); toastMsg("تم الحفظ"); }
+  save();
+  clearFields();
+  updateStats(); // Update stats
 }
 
-function closeLog(){logModal.style.display="none"}
-
-function renderLog(){
-const q=(search.value||"").toLowerCase();
-logContent.innerHTML=db[currentLog]
-.filter(i=>JSON.stringify(i).toLowerCase().includes(q))
-.map((i,idx)=>`<div class="list-item" onclick='showDetail(${JSON.stringify(i)},"${currentLog}",${idx})'>${i.الفئة||i.النوع} - ${i.المبلغ}</div>`).join("");
+function addDebt() {
+  if (!dType.value || !dAmount.value || !dDate.value || !dStatus.value) return toastMsg("أكمل البيانات");
+  const data = { النوع: dType.value, المبلغ: dAmount.value, الوصف: dDesc.value, التاريخ: dDate.value, الحالة: dStatus.value };
+  if (editMode && editMode.type === "deb") { db.deb[editMode.index] = data; editMode = null; toastMsg("تم التعديل"); }
+  else { db.deb.unshift(data); toastMsg("تم الحفظ"); }
+  save();
+  clearFields();
+  updateStats(); // Update stats
 }
 
-function showDetail(o,type,index){
-editMode={type,index};
-detailModal.style.display="flex";
-detailContent.innerHTML=Object.entries(o).map(([k,v])=>{
-if(k==="صورة"&&v)return `<p><b>صورة:</b></p><img src="${v}">`;
-return `<p><b>${k}:</b> ${v||"—"}</p>`;
-}).join("")+
-`<button class="action" onclick="editTransaction()">✏️ تعديل</button>
-<button class="secondary" onclick="deleteTransaction()">🗑️ حذف</button>`;
+function openLog(t) {
+  currentLog = t;
+  logModal.style.display = "flex";
+  renderLog();
 }
 
-function editTransaction(){detailModal.style.display="none"}
+function closeLog() { logModal.style.display = "none"; }
 
-function deleteTransaction(){
-if(!confirm("حذف المعاملة؟"))return;
-db[editMode.type].splice(editMode.index,1);
-editMode=null;
-save();
-detailModal.style.display="none";
-toastMsg("تم الحذف");
+function renderLog() {
+  const q = (search.value || "").toLowerCase();
+  logContent.innerHTML = db[currentLog]
+    .filter(i => JSON.stringify(i).toLowerCase().includes(q))
+    .map((i, idx) => `<div class="list-item" onclick='showDetail(${JSON.stringify(i)},"${currentLog}",${idx})'>${i.الفئة || i.النوع} - ${i.المبلغ}</div>`)
+    .join("");
 }
 
-function parseAmount(v){return Number(v.replace(/,/g,''))||0}
+function showDetail(o, type, index) {
+  editMode = { type, index };
+  detailModal.style.display = "flex";
+  detailContent.innerHTML = Object.entries(o).map(([k, v]) => {
+    if (k === "صورة" && v) return `<p><b>صورة:</b></p><img src="${v}">`;
+    return `<p><b>${k}:</b> ${v || "—"}</p>`;
+  }).join("") + `<button class="action" onclick="editTransaction()">✏️ تعديل</button>
+  <button class="secondary" onclick="deleteTransaction()">🗑️ حذف</button>`;
+}
 
-function updateStats(){
-let et=0,ec=db.exp.length,cats={},rt=0,rp=0,ru=0,dt=0,dp=0,du=0;
-db.exp.forEach(e=>{let a=parseAmount(e.المبلغ);et+=a;cats[e.الفئة]=(cats[e.الفئة]||0)+a});
-for(let c in cats){if(cats[c]>0)sTopCat.textContent=c}
-db.rig.forEach(r=>{let a=parseAmount(r.المبلغ);rt+=a;r.الحالة==="مدفوع"?rp+=a:ru+=a});
-db.deb.forEach(d=>{let a=parseAmount(d.المبلغ);dt+=a;d.الحالة==="مدفوع"?dp+=a:du+=a});
-sExpTotal.textContent=et.toLocaleString();sExpCount.textContent=ec;
-sRigTotal.textContent=rt.toLocaleString();sRigPaid.textContent=rp.toLocaleString();sRigUnpaid.textContent=ru.toLocaleString();
-sDebTotal.textContent=dt.toLocaleString();sDebPaid.textContent=dp.toLocaleString();sDebUnpaid.textContent=du.toLocaleString();
+function editTransaction() {
+  if (editMode && editMode.type === "exp") {
+    eAmount.value = db.exp[editMode.index].المبلغ;
+    eType.value = db.exp[editMode.index].الفئة;
+    eDesc.value = db.exp[editMode.index].الوصف;
+    eDate.value = db.exp[editMode.index].التاريخ;
+    if (db.exp[editMode.index].صورة) {
+      eImg.setAttribute('data-src', db.exp[editMode.index].صورة);
+    }
+  }
+  if (editMode && editMode.type === "rig") {
+    rName.value = db.rig[editMode.index].الاسم;
+    rAmount.value = db.rig[editMode.index].المبلغ;
+    rDesc.value = db.rig[editMode.index].الوصف;
+    rDate.value = db.rig[editMode.index].التاريخ;
+    rStatus.value = db.rig[editMode.index].الحالة;
+  }
+  if (editMode && editMode.type === "deb") {
+    dType.value = db.deb[editMode.index].النوع;
+    dAmount.value = db.deb[editMode.index].المبلغ;
+    dDesc.value = db.deb[editMode.index].الوصف;
+    dDate.value = db.deb[editMode.index].التاريخ;
+    dStatus.value = db.deb[editMode.index].الحالة;
+  }
+  detailModal.style.display = "none";
+}
+
+function deleteTransaction() {
+  if (!confirm("حذف المعاملة؟")) return;
+  db[editMode.type].splice(editMode.index, 1);
+  editMode = null;
+  save();
+  detailModal.style.display = "none";
+  toastMsg("تم الحذف");
+}
+
+function clearFields() {
+  // Clear fields after saving or editing
+  eAmount.value = eDesc.value = eType.value = eDate.value = eImg.value = "";
+  rName.value = rAmount.value = rDesc.value = rDate.value = rType.value = rStatus.value = "";
+  dType.value = dAmount.value = dDesc.value = dDate.value = dStatus.value = "";
+}
+
+function updateStats() {
+  let et = 0, ec = db.exp.length, cats = {}, rt = 0, rp = 0, ru = 0, dt = 0, dp = 0, du = 0;
+  db.exp.forEach(e => { let a = parseAmount(e.المبلغ); et += a; cats[e.الفئة] = (cats[e.الفئة] || 0) + a });
+  for (let c in cats) { if (cats[c] > 0) sTopCat.textContent = c }
+  db.rig.forEach(r => { let a = parseAmount(r.المبلغ); rt += a; r.الحالة === "مدفوع" ? rp += a : ru += a });
+  db.deb.forEach(d => { let a = parseAmount(d.المبلغ); dt += a; d.الحالة === "مدفوع" ? dp += a : du += a });
+  sExpTotal.textContent = et.toLocaleString(); sExpCount.textContent = ec;
+  sRigTotal.textContent = rt.toLocaleString(); sRigPaid.textContent = rp.toLocaleString(); sRigUnpaid.textContent = ru.toLocaleString();
+  sDebTotal.textContent = dt.toLocaleString(); sDebPaid.textContent = dp.toLocaleString(); sDebUnpaid.textContent = du.toLocaleString();
 }
 
 updateStats();
